datadog/php-datadogstatsd": "1.3.*

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,8 +9,8 @@
             "type": "pwa-chrome",
             "request": "launch",
             "name": "Launch Chrome against localhost",
-            "url": "http://localhost:8080",
-            "webRoot": "${workspaceFolder}"
+            "url": "http://Home.bizcreate.tech",
+            "webRoot": "/home/sites/21b/0/0a0f84f39d/SaasTest/main.inc.php"
         }
     ]
-}
+}datadog/php-datadogstatsd": "1.3.*
